# Learn-OpenGL

gettingStarted/: notes.txt
gettingStarted/camera/src/: main.cpp
gettingStarted/camera_class/: CMakeLists.txt
gettingStarted/camera_class/include/: camera.h
gettingStarted/camera_class/recources/: fragShader.txt
gettingStarted/camera_class/src/: main.cpp
gettingStarted/coordinate_system/include/shaders/: shader.h
gettingStarted/coordinate_system/recources/: vertexShader.txt
gettingStarted/coordinate_system/src/: main.cpp
gettingStarted/hello_window/: CMakeLists.txt
gettingStarted/hello_window/src/: main.cpp
gettingStarted/math/recources/: fragShader.txt  vertexShader.txt
gettingStarted/math/src/: main.cpp
gettingStarted/mouse/src/: main.cpp
gettingStarted/shaders/: CMakeLists.txt
gettingStarted/shaders/recources/: fragShader.txt  vertexShader.txt
gettingStarted/shaders/src/: main.cpp
gettingStarted/textures/: CMakeLists.txt
gettingStarted/textures/include/shaders/: shader.h
gettingStarted/textures/recources/: fragShader.txt  vertexShader.txt
gettingStarted/textures/src/: main.cpp
gettingStarted/walkAround/src/: main.cpp
